--- a/bib.bib
+++ b/bib.bib
@@ -1,18 +1,22 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-<<<<<<< Updated upstream
-%% Created for Pete Su at 2024-11-15 17:48:52 -0500 
-=======
-%% Created for Pete Su at 2024-11-12 07:13:58 -0500 
->>>>>>> Stashed changes
+%% Created for Pete Su at 2024-11-18 17:42:24 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
 
-<<<<<<< Updated upstream
+@inproceedings{Gibbons1975,
+	author = {Gibbons, G. W.},
+	booktitle = {{Marcel Grossmann Meeting on the Recent Progress of the Fundamentals of General Relativity}},
+	date-added = {2024-11-18 17:32:45 -0500},
+	date-modified = {2024-11-18 17:33:24 -0500},
+	pages = {449-458},
+	title = {{Quantum Processes Near Black Holes}},
+	year = {1975}}
+
 @article{Unruh2014,
 	author = {Unruh, W. G.},
 	date-added = {2024-11-15 17:48:49 -0500},
@@ -153,7 +157,7 @@
 	note = {\href{https://web.mit.edu/edbert/GR.html}{https://web.mit.edu/edbert/GR.html}},
 	title = {{Notes on GR for Physics 8.962}},
 	year = {1999}}
-=======
+
 @book{Darrigol2021,
 	author = {Darrigol, Olivier},
 	date-added = {2024-11-12 07:06:00 -0500},
@@ -165,7 +169,6 @@
 	url = {http://dx.doi.org/10.1093/oso/9780192849533.001.0001},
 	year = {2021},
 	bdsk-url-1 = {http://dx.doi.org/10.1093/oso/9780192849533.001.0001}}
->>>>>>> Stashed changes
 
 @inproceedings{Godel1931a,
 	author = {Kurt G{\"o}del},
