--- a/gibbons-1975/gibbons-main.tex
+++ b/gibbons-1975/gibbons-main.tex
@@ -34,6 +34,11 @@ The new version was typed out by Pete Su on November 18, 2024.
 \date{}
 
 \def\ni{\noindent}
+\def\be{\begin{equation}}
+\def\ee{\end{equation}}
+\def\dt{\, dt}
+\def\dphi{\, d\phi}
+\def\gtt{g_{tt}}
 
 \begin{document}
 
@@ -74,11 +79,29 @@ Since $E_1 = E_2 + E_3$ we have $E_2 > E_1$. This situation also occurs in elect
 near a point charge, in special relativity or indeed in any deep enough potential well [2].
 It also occurs near charged black holes [3].
 
-near a point
+In fact in any electro-magnetic background which is stationary, axisymmetric and
+invariant under simultaneous inversion of time and angle coordinates one finds that the
+energy $E$ and angular momentum $L$ of a particle of mass $m$ and charge $e$ must satisfy
+\be
+(E\, \dt + L\, \dphi + eA)^2 > m^2
+\ee
+where $A$ is the vector potential which falls to zero at infinity.
+This expression (or a simple generalization of it if there is a third constant of the motion)
+determines two surfaces $E^{\pm} (r,\theta)$ in the $(E, r, \theta)$ space between which
+a classical particle cannot exist. If the surface $E^+$ can fall below $- m$ we have just the
+required situation referred to sometimes as ``level crossing''. The region $r$,
+is referred to as a "generalized ergosphere" for the mode in question.
+It is easy to check the existence of such a region in "superheavy" atoms. If
+\be
+A = \Phi\, \dt + B\, \dphi; \quad \Omega = g_{\phi t}/(\gtt)
+\ee
+the rate of rotation of inertial frames and $\sigma^2 = (g_{\phi t})^2 - g_{\phi\phi}\gtt$ we have
+\be
+E^\pm = e\Phi + (L + eB)\Omega \pm \sigma^2 \sqrt{m^2 + (L + eB)^2} .
+\ee
+\ni
+On a horizon $\sigma\rightarrow 0$ and $\Omega \rightarrow \Omega_H$, $\Phi + \Omega B \rightarrow \Omega_H$, and
+$E^\pm \rightarrow e \Phi_H + L \Omega_H = \mu_H$
+which may be thought of as a chemical potential for the mode in question.
 
-In fact in any electro-magnetic background which is stationary, axisymmetric and invariant under simultaneous inversion of time and angle coordinates one ﬁnds that the energy E and angular momentum L of a particle of mass m and charge e must satisfy (E dt + Lad + eA)? > m
-
-where A is the vector potential which falls to zero at inﬁnity. This expression (or a simple generalization of it if there is a third constant of the motion) determines two surfaces E* (r,0) in the (E, r, 0) space between which a classical particle cannot exist. If the surface Et can fall below - m we have just the re-
-
-quired situation referred to sometimes as "level crossing"'. The region r, space is referred to as a "generalized ergosphere" for the mode in question. It is easy to check the existence of such a region in "superheavy" atoms. If
 \end{document}
