--- a/gibbons-1975/gibbons-main.tex
+++ b/gibbons-1975/gibbons-main.tex
@@ -19,6 +19,9 @@
 
 \usepackage[small]{titlesec}
 \usepackage{cite}
+\usepackage{upgreek}
+
+\def\Phi{\Upphi}
 
 \title{\large Quantum Processes Near Black Holes%
 \footnote{
