--- a/gibbons-1975/gibbons-main.tex
+++ b/gibbons-1975/gibbons-main.tex
@@ -39,9 +39,16 @@ The new version was typed out by Pete Su on November 18, 2024.
 \def\ni{\noindent}
 \def\be{\begin{equation}}
 \def\ee{\end{equation}}
-\def\dt{\, dt}
-\def\dphi{\, d\phi}
+\def\dt{\mathop{dt}}
+\def\dphi{\mathop{d\phi}}
 \def\gtt{g_{tt}}
+
+\NewDocumentCommand{\grad}{e{_^}}{%
+  \mathop{}\!% \mathop for good spacing before \nabla
+  \nabla
+  \IfValueT{#1}{_{\!#1}}% tuck in the subscript
+  \IfValueT{#2}{^{#2}}% possible superscript
+}
 
 \begin{document}
 
@@ -106,5 +113,13 @@ E^\pm = e\Phi + (L + eB)\Omega \pm \sigma^2 \sqrt{m^2 + (L + eB)^2} .
 On a horizon $\sigma\rightarrow 0$ and $\Omega \rightarrow \Omega_H$, $\Phi + \Omega B \rightarrow \Omega_H$, and
 $E^\pm \rightarrow e \Phi_H + L \Omega_H = \mu_H$
 which may be thought of as a chemical potential for the mode in question.
+
+From the duality between waves and particles one expects a similar phenomenon to occur for waves and indeed this turns out to be the case (Misner [4] and Zeldovich [5], and one has here the phenomenon of "super radiance." For a classical scalar ﬁeld this arises because the conserved flux vector
+\be
+J_\mu = {(\bar\phi\grad_{\!\mu\phi}-\phi\grad_{\!\mu}\bar\phi) \over 2i}
+\ee
+need not necessarily be future directed timelike. An incident wave carrying positive flux can send negative flux down the hole and the reﬂected positive flux can be greater than the incident flux. All of this is very reminiscent of the well known ``Klein Paradox'' situation [6] and indeed in the most general case of a charged, rotating black hole we have a rather close analogy to the Klein Paradox. 
+
+In our previous notation we find the $\phi$ can be written as $\phi = e^{iEt}e^{iL\phi}\chi$ and $\chi$ obeys
 
 \end{document}
