--- a/gibbons-1975/gibbons-main.tex
+++ b/gibbons-1975/gibbons-main.tex
@@ -100,8 +100,8 @@ This expression (or a simple generalization of it if there is a third constant o
 determines two surfaces $E^{\pm} (r,\theta)$ in the $(E, r, \theta)$ space between which
 a classical particle cannot exist. If the surface $E^+$ can fall below $- m$ we have just the
 required situation referred to sometimes as ``level crossing''. The region $r$,
-is referred to as a "generalized ergosphere" for the mode in question.
-It is easy to check the existence of such a region in "superheavy" atoms. If
+is referred to as a ``generalized ergosphere'' for the mode in question.
+It is easy to check the existence of such a region in ``superheavy'' atoms. If
 \be
 A = \Phi\, \dt + B\, \dphi; \quad \Omega = g_{\phi t}/(\gtt)
 \ee
@@ -114,12 +114,19 @@ On a horizon $\sigma\rightarrow 0$ and $\Omega \rightarrow \Omega_H$, $\Phi + \O
 $E^\pm \rightarrow e \Phi_H + L \Omega_H = \mu_H$
 which may be thought of as a chemical potential for the mode in question.
 
-From the duality between waves and particles one expects a similar phenomenon to occur for waves and indeed this turns out to be the case (Misner [4] and Zeldovich [5], and one has here the phenomenon of "super radiance." For a classical scalar ﬁeld this arises because the conserved flux vector
+From the duality between waves and particles one expects a similar phenomenon to occur for waves and indeed this turns out to be the case (Misner [4] and Zeldovich [5]), and one has here the phenomenon of ``super radiance.'' For a classical scalar ﬁeld this arises because the conserved flux vector
 \be
-J_\mu = {(\bar\phi\grad_{\!\mu\phi}-\phi\grad_{\!\mu}\bar\phi) \over 2i}
+J_\mu = {(\bar\phi\grad_{\!\mu}\phi-\phi\grad_{\!\mu}\bar\phi) \over 2i}
 \ee
-need not necessarily be future directed timelike. An incident wave carrying positive flux can send negative flux down the hole and the reﬂected positive flux can be greater than the incident flux. All of this is very reminiscent of the well known ``Klein Paradox'' situation [6] and indeed in the most general case of a charged, rotating black hole we have a rather close analogy to the Klein Paradox. 
+need not necessarily be future directed timelike. An incident wave carrying positive flux can send negative flux down the hole and the reflected positive flux can be greater than the incident flux. All of this is very reminiscent of the well known ``Klein Paradox'' situation [6] and indeed in the most general case of a charged, rotating black hole we have a rather close analogy to the Klein Paradox. 
 
 In our previous notation we find the $\phi$ can be written as $\phi = e^{iEt}e^{iL\phi}\chi$ and $\chi$ obeys
-
+\be
+{1 \over \sigma}(\grad_A \, \sigma \, \grad^A \chi) + {[(E \dt + L \dphi + eA)^2 - m^2]}\chi = 0
+\ee
+where $\grad_A$ denotes covariant differentiation in the $r, \theta$ plane. The conserved flux is
+\be
+J = (E\dt + L\dphi + A) |\chi|^2 + {(\bar\chi d\chi - \chi d\bar\chi) \over 2i}
+\ee
+The null generator of the horizon is
 \end{document}
