--- a/bib.bib
+++ b/bib.bib
@@ -1,7 +1,7 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2024-11-18 17:42:24 -0500 
+%% Created for Pete Su at 2024-11-19 20:48:05 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -12,7 +12,8 @@
 	author = {Gibbons, G. W.},
 	booktitle = {{Marcel Grossmann Meeting on the Recent Progress of the Fundamentals of General Relativity}},
 	date-added = {2024-11-18 17:32:45 -0500},
-	date-modified = {2024-11-18 17:33:24 -0500},
+	date-modified = {2024-11-19 20:18:14 -0500},
+	editor = {Ruffini, R.},
 	pages = {449-458},
 	title = {{Quantum Processes Near Black Holes}},
 	year = {1975}}
