--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,23 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2024-11-19 20:48:05 -0500 
+%% Created for Pete Su at 2024-11-19 21:02:36 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{t-Hooft1985,
+	author = {Hooft, Gerard't},
+	date-added = {2024-11-19 21:01:29 -0500},
+	date-modified = {2024-11-19 21:02:20 -0500},
+	journal = {Nuclear Physics B},
+	pages = {727--745},
+	publisher = {Elsevier},
+	title = {On the quantum structure of a black hole},
+	volume = {256},
+	year = {1985}}
 
 @inproceedings{Gibbons1975,
 	author = {Gibbons, G. W.},
