--- a/gibbons-1975/gibbons-main.tex
+++ b/gibbons-1975/gibbons-main.tex
@@ -9,7 +9,6 @@
 \usepackage{mathtools}
 \usepackage{tikz-cd}
 \usepackage{microtype}
-\usepackage{amssymb}
 %\usepackage{fdsymbol}
 
 % these include amsmath and that can cause trouble in older docs.
@@ -128,5 +127,42 @@ where $\grad_A$ denotes covariant differentiation in the $r, \theta$ plane. The 
 \be
 J = (E\dt + L\dphi + A) |\chi|^2 + {(\bar\chi d\chi - \chi d\bar\chi) \over 2i}
 \ee
-The null generator of the horizon is
+The null generator of the horizon is $\ell = \partial / \partial t - \Omega_H \partial/\partial\phi$.
+The flux through the horizon is $\propto \langle J, \ell \rangle \propto E - \mu_H$. Thus $E < \mu_H$
+but $E^2 < m^2$ so we have superradiance. This is of course just the previous criterion.
+
+For classical spin $\small{1\over 2}$
+fields the situation is different the conserved flux vector
+\be
+J = \bar\psi \gamma_\mu \psi
+\ee
+is always future directed timelike and so simple super radiance is not possible [7].
+However it is still possible for negative energy to fall down the hole since the stress
+tensor of a spin ${1\over 2}$ ﬁeld does not obey the positive energy condition. Note that in both
+these cases a "hole" is necessary. Super radiance cannot occur unless a particle or energy
+can be trapped inside a certain region. Having seen how super radiance is possible, the analogy
+with ``stimulated emission'' is very close. On rather general grounds --- Dirac [8], Feynman [9],
+Einstein [10] one expects --- at least for bosons a related ``spontaneous emission.''
+Further each mode should be emitted with a coefficient just given by the super radiant
+coefficient (Starobinsky [11]). Note that while these physical arguments seem quite
+compelling one possible objection is that they seem to imply that a black hole can be some sort
+of thermal equilibrium with a surrounding heat bath. This as we shall see will
+turn out to be the case but at the early stages of this subject this seemed rather
+puzzling. Before I go on, it seems worthwhile here to point out that interesting as these
+speculations seem, the motivation for following them up would have been
+rather low had it not beenin one's mind that rather small black holes
+(${\rm masses} > {\hbox{\rm planck mass}} \sim 10^{-5}$g)
+had been postulated earlier by Hawking [12] as possibly arising in the early stages of
+a chaotic big bang universe, although the idea of black holes smaller than the Chandrasekhar
+limit had been suggested earlier by Zeldovich [13]. In this connection these early
+speculations brought to light an amusing coincidence Starobinsky [11] pointed out
+that the order of magnitude for the time for spontaneous loss of all of its angular
+momentum by a black hole of mass must be (in units such that $G = c = h = k = 1$)
+\be
+t \sim M^3
+\ee
+Thus a hole would lose all of its angular momentum in less than $10^{10}$
+years if its mass were less than $10^{-13}\,{\rm cm}$ -- a number not without
+significance in other contexts.
+
 \end{document}
