--- a/gibbons-1975/gibbons-main.tex
+++ b/gibbons-1975/gibbons-main.tex
@@ -41,6 +41,9 @@ The new version was typed out by Pete Su on November 18, 2024.
 \def\dt{\mathop{dt}}
 \def\dphi{\mathop{d\phi}}
 \def\gtt{g_{tt}}
+\def\Tuv{\langle T_{\mu\nu} \rangle}
+\def\TOO{\langle T_{00} \rangle}
+\def\TOr{\langle T_{0r} \rangle}
 
 \NewDocumentCommand{\grad}{e{_^}}{%
   \mathop{}\!% \mathop for good spacing before \nabla
@@ -131,14 +134,14 @@ The null generator of the horizon is $\ell = \partial / \partial t - \Omega_H \p
 The flux through the horizon is $\propto \langle J, \ell \rangle \propto E - \mu_H$. Thus $E < \mu_H$
 but $E^2 < m^2$ so we have superradiance. This is of course just the previous criterion.
 
-For classical spin $\small{1\over 2}$
+For classical spin ½
 fields the situation is different the conserved flux vector
 \be
 J = \bar\psi \gamma_\mu \psi
 \ee
 is always future directed timelike and so simple super radiance is not possible [7].
 However it is still possible for negative energy to fall down the hole since the stress
-tensor of a spin ${1\over 2}$ ﬁeld does not obey the positive energy condition. Note that in both
+tensor of a spin ½ ﬁeld does not obey the positive energy condition. Note that in both
 these cases a "hole" is necessary. Super radiance cannot occur unless a particle or energy
 can be trapped inside a certain region. Having seen how super radiance is possible, the analogy
 with ``stimulated emission'' is very close. On rather general grounds --- Dirac [8], Feynman [9],
@@ -174,6 +177,73 @@ must exceed $e^2/m_e$ (which is coincidentally the least mass of a ``classical g
 Essentially the same ideas seem to have occurred to Zaumen [17] independently.
 The story has also been taken up by Rufﬁni and Deruelle [19]and Rufﬁni and Damour [20].
 These estimates made it very unlikely that mini black holes possessed charge.
+
+Having seen the physical ideas which enter it remained to give them a
+more rigorous expression. The first person to tackle this problem was
+Unruh [21]. Since there is at present no well worked out candidate for a quantum theory
+of gravity Unruh adopted an approach in which the gravitational field was treated as
+a classical background--the so called external field approach. Thus one takes
+the equations describing a free quantum field in flat space and minimally
+couples them to the external field by the replacement $\partial_\mu \to \grad_\mu - ieA_\mu$.
+This does not always yield a sensible theory [41] but in the case of spin 0, ½ and 1 a workable
+theory results.
+
+The next problem one encounters is the definition of particle states or may
+be summarized as follows: the basic strategy of the quanvacuum state. This
+quantum theory of fields is to resolve a field into normal modes. The coefficients
+of these normal modes obey the familiar bose einstein/ fermi-dirac commutation/anticommutation
+relations. This gives field commutation/anticommutation relations which are independent
+of the choice of normal modes--provided they are properly normalized with the
+natural sesquilinear form available:
+\begin{align}
+\frac{1}{2i} \int (\bar\phi\grad_\mu\phi - \phi\grad_\mu\phi) d\Sigma^\mu \quad & \text{for spin 0}\\
+\int \bar\psi\gamma^\mu\psi d\Sigma^\mu \quad & \text{for spin ½}
+\end{align}
+What is {\it not} independent of the choice is the vacuum state. Any transformation
+of the normal modes (Bogoliubov transformation) which mixes up particle and
+antiparticle modes (or positive and negative frequencies to use a conventional expression)
+will give an inequivalent definition of the vacuum state. Indeed it --- as
+seems to occur in most practical examples the number of ``created particles'' diverges
+the two different state vectors may not even be connected by a unitary transformation [22].
+Unruh made a particular choice --- essentially that the particle modes be positive
+frequency with respect to the Killing vector $\partial/\partial t$ in the Kerr solution.
+He then computed the stress tensor expectation value $\Tuv$ in this state and found
+that $\TOO$ was infinite, $\TOr$ was finite and corresponded to an outward flux of
+super radiant modes at the expected rate. Similar results were subsequently found by Ford [23].
+It should be mentioned that the gravitational background used was the maximally
+extended Kerr solution. We see that in general we meet three generic types of problem:
+\begin{enumerate}
+\item choice of vacuum state
+\item infinities in $T$
+\item breakdown for higher spins.
+\end{enumerate}
+All of these problems occur and are familiar in the corresponding electromagnetic
+case. The next advance came with the work of Hawking [24]. He realized that
+
+\begin{enumerate}
+\item One can only satisfactorily define particle states at infinity
+
+\item One must for a satisfactory treatment take collapse
+into account.
+\end{enumerate}
+To take the first point --- Hawking decided --- in the spirit of the matrix
+approach to define two vacua, the in vacuum and the out vacuum $\vert 0_{-} \rangle$, $\vert 0_+ \rangle$.
+Provided past infinity constitutes a cauchy surface (thus excluding the mixed white
+hole/black hole situation considered by Unruh) one may define an initial no
+particle state by the usual prescription of associating positive frequencies
+with particle states and conversely negative frequencies with anti-particle states.
+Since the idea of positive frequency is invariant under the asymptotic symmetry group --- the B.M.S.
+group this remains valid even in the presence of gravitational radiation. 
+Indeed one canshow that the gravitational field of a plane wave (like a plane electromagnetic wave)
+is incapable of producing particles [25]. Since at infinity any ingoing radiation will be effectively plane it is clear that as far
+as past infinity is concerned we have a reasonable definition of what it means to
+say that there are initially no ingoing particles. Similarly we can identify outgoing particles
+at future infinity. The task of identifying particle states in the interaction region is much less clear.
+This is perhaps not unreasonable --- physically a particle is really a certain sort
+of normal mode with high symmetry --- mathematically it is connected with irreducible
+representations of the Poincare Group [26]. Neither of these concepts is applicable near the black hole.
+These remarks do {\it not} apply to the strong electromagnetic field around a large black hole since
+here the typical wavelength of the created particles is much smaller than the horizon size.
 
 
 \end{document}
