--- a/gibbons-1975/gibbons-main.tex
+++ b/gibbons-1975/gibbons-main.tex
@@ -231,16 +231,16 @@ Provided past infinity constitutes a Cauchy surface (thus excluding the mixed wh
 hole/black hole situation considered by Unruh) one may define an initial no
 particle state by the usual prescription of associating positive frequencies
 with particle states and conversely negative frequencies with anti-particle states.
-Since the idea of positive frequency is invariant under the asymptotic symmetry group --- the B.M.S.
-group --- this remains valid even in the presence of gravitational radiation. 
+Since the idea of positive frequency is invariant under the asymptotic symmetry group, the B.M.S.
+group. This remains valid even in the presence of gravitational radiation. 
 Indeed one can show that the gravitational field of a plane wave (like a plane electromagnetic wave)
 is incapable of producing particles [25]. Since at infinity any ingoing radiation will be effectively plane it is clear that as far
 as past infinity is concerned we have a reasonable definition of what it means to
 say that there are initially no ingoing particles. Similarly we can identify outgoing particles
 at future infinity. The task of identifying particle states in the interaction region is much less clear.
-This is perhaps not unreasonable --- physically a particle is really a certain sort
-of normal mode with high symmetry --- mathematically it is connected with irreducible
-representations of the Poincare Group [26]. Neither of these concepts is applicable near the black hole.
+This is perhaps not unreasonable. Physically a particle is really a certain sort
+of normal mode with high symmetry. Mathematically it is connected with irreducible
+representations of the Poincar\'e Group [26]. Neither of these concepts is applicable near the black hole.
 These remarks do {\it not} apply to the strong electromagnetic field around a large black hole since
 here the typical wavelength of the created particles is much smaller than the horizon size.
 
