--- a/gibbons-1975/gibbons-main.tex
+++ b/gibbons-1975/gibbons-main.tex
@@ -44,6 +44,7 @@ The new version was typed out by Pete Su on November 18, 2024.
 \def\Tuv{\langle T_{\mu\nu} \rangle}
 \def\TOO{\langle T_{00} \rangle}
 \def\TOr{\langle T_{0r} \rangle}
+\def\out{\text{\it out}}
 
 \NewDocumentCommand{\grad}{e{_^}}{%
   \mathop{}\!% \mathop for good spacing before \nabla
@@ -244,5 +245,20 @@ representations of the Poincar\'e Group [26]. Neither of these concepts is appli
 These remarks do {\it not} apply to the strong electromagnetic field around a large black hole since
 here the typical wavelength of the created particles is much smaller than the horizon size.
 
+Now to turn to the next point. The problem is to count the number of out-going particles in
+state which initially contained no ingoing particles. We are working in the Heisenberg picture.
+\be
+N_i^{\out} = \langle 0_{-} \vert (a_i^\out)^\dagger(a_i^\out)\vert 0_{-}\rangle
+\ee
+Taking the collapse into account and the very high redshifts associated with the formation
+of the event horizon Hawking was able to show that this number diverges which he also
+showed corresponded to a steady emission at a rate
+\be
+R_i = \Gamma_i \biggl(\exp \bigl ( \frac{E_i - N_i\Omega_H - e_i\Phi_h}{T}\bigr) \mp 1 \biggr)^{-1}
+\begin{array}{ll}
+\small - & \text{\small for bosons}\\
+\small + & \text{\small for fermions}
+\end{array}
+\ee
 
 \end{document}
