--- a/gibbons-1975/quantum-black-holes.tex
+++ b/gibbons-1975/quantum-black-holes.tex
@@ -17,12 +17,12 @@ bookmarksopen=true,
 bookmarksnumbered=true,
 bookmarksopenlevel=10
 }
-%\usepackage[noBBpl,sc]{mathpazo}
-\usepackage[full]{textcomp}
-\usepackage[osf]{XCharter}% lining figures in math, osf in text
-\usepackage[scaled=1.04,varqu,varl]{inconsolata}% inconsolata typewriter
-\usepackage[bb=pazo,cal=cm,scr=esstix]{mathalpha}
+\usepackage[noBBpl,sc]{mathpazo}
+%\usepackage[full]{textcomp}
+%\usepackage[osf]{XCharter}% lining figures in math, osf in text
+%\usepackage[scaled=1.04,varqu,varl]{inconsolata}% inconsolata typewriter
+%\usepackage[bb=pazo,cal=cm,scr=esstix]{mathalpha}
 %\usepackage{eulervm}
-\usepackage[xcharter,vvarbb,scaled=1.03,smallerops,bigdelims]{newtxmath}
+%\usepackage[xcharter,vvarbb,scaled=1.03,smallerops,bigdelims]{newtxmath}
 
 \input gibbons-main
