--- a/gibbons-1975/gibbons-1975.tex
+++ b/gibbons-1975/gibbons-1975.tex
@@ -17,7 +17,7 @@ bookmarksopen=true,
 bookmarksnumbered=true,
 bookmarksopenlevel=10
 }
-\usepackage[noBBpl,sc]{mathpazo}
+%\usepackage[noBBpl,sc]{mathpazo}
 %\usepackage[full]{textcomp}
 %\usepackage[osf]{XCharter}% lining figures in math, osf in text
 %\usepackage[scaled=1.04,varqu,varl]{inconsolata}% inconsolata typewriter
