--- a/gibbons-1975/gibbons-main.tex
+++ b/gibbons-1975/gibbons-main.tex
@@ -48,7 +48,7 @@ The new version was typed out by Pete Su on November 18, 2024.
 \def\out{\text{\it out}}
 \def\k{\kappa}
 \def\OH{\Omega_H}
-\def\PH{\Phi_H}
+\def\PH{\Phi_{\!H}}
 \def\AH{A_H}
 \def\half{\small{\frac{1}{2}}}
 
@@ -355,7 +355,6 @@ As I explained earlier this depends, for horizon modes, on $E-\mu_H$.
 Thus roughly speaking, a wave can appear as antiparticle near the horizon
 ($E-\mu_H < 0$) but as a particle at infinity ($E > 0$).
 \end{enumerate}
-
 From what has been said above it is clear that for all its spectacular
 successes, Hawking's derivation of his result is not entirely satisfactory For
 an alternative attempt see [31], for skeptical remarks [32], [33].
