--- a/gibbons-1975/gibbons-main.tex
+++ b/gibbons-1975/gibbons-main.tex
@@ -48,7 +48,7 @@ The new version was typed out by Pete Su on November 18, 2024.
 \def\out{\text{\it out}}
 \def\k{\kappa}
 \def\OH{\Omega_H}
-\def\PH{\Phi_{\!H}}
+\def\PH{\mathop{}\Phi_{\!H}}
 \def\AH{A_H}
 \def\half{\small{\frac{1}{2}}}
 
@@ -124,7 +124,7 @@ A = \Phi\, \dt + B\, \dphi; \quad \Omega = g_{\phi t}/(\gtt)
 \ee
 the rate of rotation of inertial frames and $\sigma^2 = (g_{\phi t})^2 - g_{\phi\phi}\gtt$ we have
 \be
-E^\pm = e\Phi + (L + eB)\Omega \pm \sigma^2 \sqrt{m^2 + (L + eB)^2} .
+E^\pm = e\mathop\Phi + (L + eB)\Omega \pm \sigma^2 \sqrt{m^2 + (L + eB)^2} .
 \ee
 \ni
 On a horizon $\sigma\rightarrow 0$ and $\Omega \rightarrow \OH$, $\Phi + \Omega B \rightarrow \OH$, and
