--- a/BH-penrose/BH.tex
+++ b/BH-penrose/BH.tex
@@ -77,7 +77,7 @@ The basic setup:
     \draw[thick] (S) -- (E);
     \draw[dashed] (S) -- (N);
     \draw[very thick] (NE) -- (O);
-    \draw[] (SE) -- (O);
+    \draw[thick] (SE) -- (O);
 
     % LABELS
     \node[right] at (E) {$i^0$};
@@ -125,7 +125,7 @@ Hawking radiation diagram:
     \draw[thick] (S) -- (E);
     \draw[dashed] (S) -- (N);
     \draw[very thick] (NE) -- (O);
-    \draw[] (SE) -- (O);
+    \draw[thick] (SE) -- (O);
     \draw[red,dashed] (.47,-.52) -- (0,-.05) -- (.52,.470);
 
     % LABELS
@@ -147,7 +147,7 @@ Hawking radiation diagram:
 
     
     % singularity
-  	\draw[thick, decorate,decoration={zigzag,aspect=0,amplitude=3.1pt,segment length=9.4pt}] (0,0.5) -- (NE);
+  	\draw[thick, decorate,decoration={zigzag,aspect=0,amplitude=3.1pt,segment length=9.4pt}] (NE) -- (0,0.5);
 
     % Collapsing shell
     \path [draw=blue] (S) .. controls (.2,0) .. (.05,.49);
