--- a/gibbons-1975/gibbons-main.tex
+++ b/gibbons-1975/gibbons-main.tex
@@ -106,7 +106,7 @@ Since $E_1 = E_2 + E_3$ we have $E_2 > E_1$. This situation also occurs in elect
 near a point charge, in special relativity or indeed in any deep enough potential well [2].
 It also occurs near charged black holes [3].
 
-In fact in any electro-magnetic background which is stationary, axisymmetric and
+In fact in any electromagnetic background which is stationary, axisymmetric and
 invariant under simultaneous inversion of time and angle coordinates one finds that the
 energy $E$ and angular momentum $L$ of a particle of mass $m$ and charge $e$ must satisfy
 \be
@@ -131,7 +131,11 @@ On a horizon $\sigma\rightarrow 0$ and $\Omega \rightarrow \OH$, $\Phi + \Omega 
 $E^\pm \rightarrow e \PH + L \OH = \mu_H$
 which may be thought of as a chemical potential for the mode in question.
 
-From the duality between waves and particles one expects a similar phenomenon to occur for waves and indeed this turns out to be the case (Misner [4] and Zeldovich [5]), and one has here the phenomenon of ``super radiance.'' For a classical scalar ﬁeld this arises because the conserved flux vector
+From the duality between waves and particles one expects a similar
+phenomenon to occur for waves and indeed this turns out to be the case
+(Misner [4] and Zeldovich [5]), and one has here the phenomenon of
+``super radiance.'' For a classical scalar ﬁeld this arises because
+the conserved flux vector
 \be
 J_\mu = {(\bar\phi\grad_{\!\mu}\phi-\phi\grad_{\!\mu}\bar\phi) \over 2i}
 \ee
@@ -190,7 +194,7 @@ electric field is less than the critical ﬁeld mile the rate is very fast.
 This implied that to have a charge comparable with its mass the black hole mass
 must exceed $e^2/m_e$ (which is coincidentally the least mass of a ``classical geon'' [16].
 Essentially the same ideas seem to have occurred to Zaumen [17] independently.
-The story has also been taken up by Rufﬁni and Deruelle [19]and Rufﬁni and Damour [20].
+The story has also been taken up by Rufﬁni and Deruelle [19] and Rufﬁni and Damour [20].
 These estimates made it very unlikely that mini black holes possessed charge.
 
 Having seen the physical ideas which enter it remained to give them a
@@ -301,9 +305,9 @@ calculations (i.e. in the fully extended Kruskal manifold) give no production [2
 It should be pointed out that the result one gets in the Kruskal manifold depends
 crucially on what boundary conditions one sets on the past horizon. A suitable choice
 could in principle yield any desired result. Unruh has pointed out that one may obtain
-Hawking's result by chosing as part of one's set of normal modes a set entering the
+Hawking's result by choosing as part of one's set of normal modes a set entering the
 external region of the black hole from the past horizon and behaving like a complex
-exponential of the affine parameter onthe post horizon (see his article).
+exponential of the affine parameter on the past horizon (see his article).
 Secondly in order to obtain the result it is necessary to take into account normal
 modes of arbitrarily high energy(way above the Planck frequency) essentially because
 of the red shifting effect of the horizon. Indeed, if one imposes a cutoff frequency
@@ -404,7 +408,7 @@ appearing altogether, and presumably with it the baryons that make it up. To my
 knowledge now one has mechanism whereby black holes can emit more baryons than
 antibaryon without making use of long range fields carrying baryonic charge [37].
 If we adopt the thermodynamic viewpoint even when particle interactions
-aretaken into account, then presumably a black hole will emit precisely what it
+are taken into account, then presumably a black hole will emit precisely what it
 would accrete from a heat bath at the same temperature. In terms of our simple
 arguments before the probability of emission is now no longer simply proportional
 to the available phase space. Carter, Lin and Perry and myself [38] have recently
@@ -422,8 +426,7 @@ old theory of black body radiation requires revision. Consider a cavity of fixed
 volume $V$. They fill it with more and more energy.
 
 At first the cavity will contain an ordinary black body gas and its
-temperature will rise. As it does, 
-however, a qualitatively different behavior sets
+temperature will rise. As it does, however, a qualitatively different behavior sets
 in. We have to maximize the entropy, $S$, of the configuration subject to the
 energy, $E$, being held constant.
 \begin{align}
@@ -432,7 +435,7 @@ E &= M + aVT^4
 \end{align}
 where $a$ is Stefan's constant.
 
-If $x = M/E$ and $y = (aV/E^5)/3\pi$ this amounts to maxmimizing $F = x^2 - (1-x)^{3/4}$
+If $x = M/E$ and $y = (aV/E^5)/3\pi$ this amounts to maximizing $F = x^2 - (1-x)^{3/4}$
 on $[0,1]$. For $y > {2^5}{3^{-1}} 5^{-5/4} = 1.4266$ has no turning points and its greatest
 value is attained at $x=0$ (pure radiation). For $1.4266 > y > 1.01440$ there is a
 local minimum at $x < \frac{4}{5}$ and a local maximum at $x < \frac{4}{5}$ but 
@@ -442,11 +445,9 @@ Thus for a box with sufficient energy a black hole of
 mass $M = \frac{1}{8\pi T}$ will condense out.
 As the energy of the enclosure is further increased the temperature will drop.
 Thus for any volume $V$ there is a maximum temperature 
-\begin{align*}
-T_m &= \frac{1}{8\pi}x_c^{3/4}aV^{-1/5}(3\pi y_c)^{4/5}\\
-& = x_c^{-1/4} T_c \\
-&  \,\,\quad x_c = 0.97702, \,\, y_c = 1.01440.
-\end{align*}
+$T_m = \frac{1}{8\pi}x_c^{3/4}aV^{-1/5}(3\pi y_c)^{4/5} = x_c^{-1/4} T_c$ ; 
+$x_c = 0.97702$ and $y_c = 1.01440$.
+
 The point of the example is to indicate how basic Hawking's discovery is
 in relation to our views of fundamental physics. 
 What part the sort of speculations contained in [38] on the deeper
@@ -487,98 +488,98 @@ W. Unruh "Notes on Black Hole Evaporation"
 \small
 \raggedright
 
-\bibitem[1]{1} R. Penrose. Riv. Nuovo Cimento 1 252 (1969)
+\bibitem[1]{1} R. Penrose. Riv. Nuovo Cimento {\bf 1} 252 (1969)
 
-\bibitem[2]{2} G. Denardo \& A. Treves. Lett. al. Nuovo Cimento \& 295 (1973)
+\bibitem[2]{2} G. Denardo \& A. Treves. Lett. al. Nuovo Cimento {\bf 8} 295 (1973)
 
 \bibitem[3]{3} G. Denardo \& R. Ruffini. Phys. Lett. 45B 259 (1973); G. Denardo, L. Hively
 \& R. Ruffini. Phys. Lett. 50B 270 (1974); cf. also Ya. B. Zeldovich \&
-V. S. Popov. Uspekhi 14 673 (1972); L. I. Schiff, H. Snyder \& J. Weinberg,
-Phys. Rev. 57 315 (1940)
+V. S. Popov. Uspekhi {\bf 14} 673 (1972); L. I. Schiff, H. Snyder \& J. Weinberg,
+Phys. Rev. {\bf 57} 315 (1940)
 
-\bibitem[4]{4} C. Misner. Bull. Amer. Phys. Soc. 17 472 (1972)
+\bibitem[4]{4} C. Misner. Bull. Amer. Phys. Soc. {\bf 17} 472 (1972)
 
-\bibitem[5]{} Ya. Zeldovich J.E.T.P. 35 (1972)
+\bibitem[5]{} Ya. Zeldovich J.E.T.P. {\bf 35} (1972)
 
-\bibitem[6]{} O. Klein, Zeit. fur Phys. 53 157 (1929)
+\bibitem[6]{} O. Klein, Zeit. fur Phys. {\bf 53} 157 (1929)
 
-\bibitem[7]{7} W. Unruh. Phys. Rev. Lett. 31 1265 (1973)
+\bibitem[7]{7} W. Unruh. Phys. Rev. Lett. {\bf 31} 1265 (1973)
 
 \bibitem[8]{8} P. A. M. Dirac. Quantum Mechanics O.U.P.
 
-\bibitem[9]{} R. D. Feynman. Lectures on Physics, Vol. 111.
+\bibitem[9]{} R. D. Feynman. Lectures on Physics, Vol. III
 
-\bibitem[10]{} A. Einstein. Phys. Zeit 18 121 (1917)
+\bibitem[10]{} A. Einstein. Phys. Zeit \textbf{18} 121 (1917)
 
-\bibitem[11]{} A. Starobinsky. J.E.T.P. 37 28 (1973)
+\bibitem[11]{} A. Starobinsky. J.E.T.P. \textbf{37} 28 (1973)
 
 \bibitem[12]{} S. W. Hawking.
-M.N.R.A.S. 152 75 (1971); B. J. Carr \& S. W. Hawking,
-M.N.R.A.S. 168 399 (1974)
+M.N.R.A.S. \textbf{152} 75 (1971); B. J. Carr \& S. W. Hawking,
+M.N.R.A.S. \textbf{168} 399 (1974)
 
-\bibitem[13]{13} Ya. Zeldovich. J.E.T.P. 446 (1962) 
+\bibitem[13]{13} Ya. Zeldovich. J.E.T.P. \textbf{446} (1962) 
 
 \bibitem[14]{14} G. W. Gibbons \& S. W. Hawking. Work reported at Warsaw Conference 1973
 see ``Gravitational Radiations and Gravitational Collapse'' C. deWitt (ed.) Reidel (1974)
 
-\bibitem[15]{} J. Schwinger. Phys. Rev. 82 664 (1951)
+\bibitem[15]{} J. Schwinger. Phys. Rev. \textbf{82} 664 (1951)
 
 \bibitem[16]{} J. Wheeler. ``Geometrodynamics'' Academic Press (1972)
 
-\bibitem[17]{} W. T. Zaumen. Nature 247 530 (1974)
+\bibitem[17]{} W. T. Zaumen. Nature \textbf{247} 530 (1974)
 
-\bibitem[19]{} N. Deruelle \& R. Ruffini. Phys. Lett. 52B 437 (1975)
+\bibitem[19]{} N. Deruelle \& R. Ruffini. Phys. Lett. \textbf{52B} 437 (1975)
 
 \bibitem[20]{} T. Damour \& R. Ruffini. ``Quantum electrodynamic effects in Kerr-Newman
 Geometries'' Princeton Preprint. Dec. 1974
 
-\bibitem[21]{} W. Unruh. Phys. Rev. D 10 3194 (1974) .
+\bibitem[21]{} W. Unruh. Phys. Rev. D \textbf{10} 3194 (1974) .
 
 \bibitem[22]{} Cf. M. Castagnino, A. Verbeuri \& R. A. Weder,
-Nuovo Cimento 26B 396 (1975), Phys. Lett. 48A 99 (1974);
-R. Wald. Commun. Math. Phys. 46 (1975)
+Nuovo Cimento 26B 396 (1975), Phys. Lett. \textbf{48A} 99 (1974);
+R. Wald. Commun. Math. Phys. \textbf{46} (1975)
 
 \bibitem[23]{} L. Ford ``Quantization of a Scalar Field in the Kerr Spacetime'' Milwaukee Preprint UWM-4867-74-17 (1974)
 
-\bibitem[24]{} S. W. Hawking. Nature 248 30 (1974); S. W. Hawking. Commun. Math. Phys.
-43 199 (1975)
+\bibitem[24]{} S. W. Hawking. Nature 248 \textbf{30} (1974); S. W. Hawking. Commun. Math. Phys.
+\textbf{43} 199 (1975)
 
-\bibitem[25]{} G. W. Gibbons. Commun. M. Phys. 45 191 (1975)
+\bibitem[25]{} G. W. Gibbons. Commun. M. Phys. \textbf{45} 191 (1975)
 
-\bibitem[26]{} E. Wigner. Ann. of Math. 40 (1939)
+\bibitem[26]{} E. Wigner. Ann. of Math. \textbf{40} (1939)
 
-\bibitem[27]{} D. Boulware. Phys. Rev. D 11 1406 (1975); D. Boulware. ``Spin 1/2 Quantum
+\bibitem[27]{} D. Boulware. Phys. Rev. D \textbf{11} 1406 (1975); D. Boulware. ``Spin 1/2 Quantum
 Field Theory in Schwarzschild Space'' Seattle Preprint RL-1388-689 (1975).
 
-\bibitem[28]{} J. D. Beckenstein. Phys. Rev. D7 2333 (1972)
+\bibitem[28]{} J. D. Beckenstein. Phys. Rev. \textbf{D7} 2333 (1972)
 
-\bibitem[29]{} J. Bardeen, B. Carter \& S. W. Hawking, Commun. Math. Phys. 31 162 (1973)
+\bibitem[29]{} J. Bardeen, B. Carter \& S. W. Hawking, Commun. Math. Phys. \textbf{31} 162 (1973)
 
-\bibitem[30]{} G. W. Gibbons, Commun. Math. Phys. 44 245 (1975)
+\bibitem[30]{} G. W. Gibbons, Commun. Math. Phys. \textbf{44} 245 (1975)
 
 \bibitem[31]{} U. Gerlach. ``Mechanism of Black Body Radiation from an incipient Black
 Hole'' Ohio Preprint.
 
-\bibitem[32]{} J. G. Taylor \& P. Davies. Nature 250 37 (1974) .
+\bibitem[32]{} J. G. Taylor \& P. Davies. Nature \textbf{250} 37 (1974) .
 
-\bibitem[33]{} P. W. Davies. J. Phys. A 8 609 (1975).
+\bibitem[33]{} P. W. Davies. J. Phys. A \textbf{8} 609 (1975).
 
-\bibitem[34]{} B. deWitt. Physics Reports 29C. 295 (1975).
+\bibitem[34]{} B. deWitt. Physics Reports \textbf{29C} 295 (1975).
 
-\bibitem[35]{} E.g. S. Deser and P. van Nieuwenhuizen. Phys. Rev. d 10 411 (1974) .
+\bibitem[35]{} E.g. S. Deser and P. van Nieuwenhuizen. Phys. Rev. D \textbf{10} 411 (1974) .
 
-\bibitem[36]{} L. Parker Phys. Rev. D 12 (1975).
+\bibitem[36]{} L. Parker Phys. Rev. D \textbf{12} (1975).
 
-\bibitem[37]{} B. Carter. Phys. Rev. Lett. 33 558 (1974).
+\bibitem[37]{} B. Carter. Phys. Rev. Lett. \textbf{33} 558 (1974).
 
 \bibitem[38]{} B. Carter, G. W. Gibbons, D. Lin \& M. Perry ``The Black Hole emission
 process in the high energy limit'' in preparation.
 
-\bibitem[39]{} J. Sarfatt. Nature 240 101 (1972) .
+\bibitem[39]{} J. Sarfatt. Nature \textbf{240} 101 (1972) .
 
 \bibitem[40]{} B. J. Carr. ``The Primordial Mass Spectrum'' Caltech Preprint (1975).
 
-\bibitem[41]{} G. W. Gibbons. J. Phys. A 9 145 (1976).
+\bibitem[41]{} G. W. Gibbons. J. Phys. A \textbf{9} 145 (1976).
 
 \end{thebibliography}
 \end{document}
