--- a/BH-penrose/BH2.tex
+++ b/BH-penrose/BH2.tex
@@ -66,22 +66,45 @@ bookmarksopenlevel=10
     \coordinate (N) at ( 0.5, 1); % north: t=+infty, i+
     \coordinate (E) at ( 1.25, 0.25); % east:  r=+infty, i0
     \coordinate (NE) at ( .75, .75); 
-    \coordinate (SE) at ( .5, -.5);
+    \coordinate (SM) at ( .5, -.5);
+    \coordinate (NM) at ( 1, .5);
     \coordinate (mid) at (.5,.5);
     \draw[thick] (E) -- (NE);
     \draw[thick] (S) -- (E);
     \draw[dashed] (S) -- (0,.75);
     \draw[thick] (NE) -- (O);
-	\draw[thick] (SE) -- (O);
+	\draw[thick] (SM) -- (O);
     % LABELS
     	
+	    \node[right] at (E) {$i^0$};
+    \node[above right] at (NE) {$i^+$};
+    \node[below] at (S) {$i^-$};
+    \node[rotate=90] at (-.05,0) {\small{$r=0$}};
+    \node[above right] at (1,.5) {$\scri^+$};
+    \node[below right] at (.8,-.15) {$\scri^-$};
+    \node[above, rotate=45] at (0.4,.4) {\small ${\mathcal H}^+$};
+
+    % Coordinates
+    \node[below, rotate=45] at (0.3,0.3) {\small $u = \infty$};
+    \node[above, rotate=45] at (0.8,-0.2) {\small $u = -\infty$};
+    
+    \node[above, rotate=-45] at (0.25,0.-0.25) {\small $v = v_0$};
+    \node[below, rotate=-45] at (1,.5) {\small $v = \infty$};
     
     % singularity
   	\draw[thick, decorate,decoration={zigzag,aspect=0,amplitude=2.3pt,segment length=3.5pt}] (0,0.75) -- (NE);
 
     % Collapsing shell
     \path [draw=blue] (S) .. controls (.2,0) .. (.01,.75);
-        
+    
+    % Text labels
+    \coordinate (SI) at (.5,1);
+    \node [anchor=north](C) at (.55,-.75) {\footnotesize Collapsing star};
+    \node[anchor=south] at (SI) {\footnotesize Singularity};
+
+    \draw[-latex]  (C.north) -- (0.11, -.5);
+    \draw[-latex]  (SI)  -- (0.3, .78);
+
 \end{tikzpicture}
 \end{center}
 
