--- a/BH-penrose/BH2.tex
+++ b/BH-penrose/BH2.tex
@@ -57,6 +57,35 @@ bookmarksopenlevel=10
 
 \begin{document}
 
+Here is a Penrose (or Carter-Penrose diagram, or Conformal diagram) of a star collapsing to become a black hole.
+
+What this picture does is collapse all of space into the $x$-axis and time into the $y$-axis.
+The idea is then that you can summarize all of the possible causal relationships in
+all of infinite space and all of time in one small finite picture. Objects moving at the speed
+of light then move along lines that have a slope of exactly 45 degrees
+($\pi/4$). These are also called ``null'' rays or trajectories in the literature.
+
+
+Here are what the labels mean:
+
+\begin{itemize}
+\item $i^+$ is where time is at $+$ infinity, also called ``timelike'' infinity.
+\item $i^-$ is where time is at $-$ infinity.
+\item $i^0$ is $+$ infinity for space, , also called ``spacelike'' infinity. The zero here is because
+time is zero on this line?
+\item $\scri^+$ is the boundary of the universe in the future at plus infinity.
+\item $\scri^-$ is the boundary of the universe in the past at minus infinity.
+\item ${\mathcal H}^+$ is position of the event horizon at plus infinity.
+\item $\scri^-$ is the boundary of the universe in the past at minus infinity.
+\item The coordinates $v$ move ``outward'' with respect to the eventual black hole from past
+infinity to future infinity. The line at $v=0$ is the last vector that can escape the black hole
+after the event horizon has formed.
+\item The coordinates $u$ move ``inward'' with respect to the eventual black hole from past
+infinity towards the event horizon. The line at $u=+\infty$ is the where the event horizon forms.
+\item The wavy line is the the singularity inside the black hole.
+\item The blue line is the star collapsing and forming the black hole.
+\end{itemize}
+
 \begin{center}
 \begin{tikzpicture}[scale=4]
         
@@ -79,7 +108,7 @@ bookmarksopenlevel=10
 	    \node[right] at (E) {$i^0$};
     \node[above right] at (NE) {$i^+$};
     \node[below] at (S) {$i^-$};
-    \node[rotate=90] at (-.05,0) {\small{$r=0$}};
+    \node[rotate=90] at (-.06,0) {\small{$r=0$}};
     \node[above right] at (1,.5) {$\scri^+$};
     \node[below right] at (.8,-.15) {$\scri^-$};
     \node[above, rotate=45] at (0.4,.4) {\small ${\mathcal H}^+$};
