--- a/BH-penrose/BH2.tex
+++ b/BH-penrose/BH2.tex
@@ -57,7 +57,7 @@ bookmarksopenlevel=10
 
 \begin{document}
 
-Here is a Penrose (or Carter-Penrose diagram, or Conformal diagram) for empty space.
+Here is a Penrose diagram (or Carter-Penrose diagram, or Conformal diagram) for empty space.
 
 \begin{center}
 \begin{tikzpicture}[scale=4]
@@ -168,12 +168,11 @@ radius of the start is $0$.
 \item ${\mathcal H}^+$ is position of the event horizon at plus infinity.
 \item The wavy line is the the singularity inside the black hole.
 \item The blue line is the star collapsing and forming the black hole.
-\item The coordinate system $(u,v)$ defines
-
- $u$ move ``inward'' with respect to the eventual black hole from past
-infinity towards the event horizon. The line at $u=+\infty$ is the where the event horizon forms.
-\item The coordinates $v$ go from $-\infty$
-\item The ray at constant $v_0$
+\item The coordinate system $(u,v)$ moves along the null rays (45 degree lines). The event
+horizon of the black hole is that $u=\infty$, and the future of everything is that $v=\infty$.
+\item The line at $v=v_0$  passes through the star and forms the
+event horizon. Thus any ray with $v > v_0$ falls into the black hole, and $v < v_0$ escpes. 
+We can think of $v_0$ as the $0$ point in the $v$ direction.
 \end{itemize}
 
 \end{document}
