--- a/BH-penrose/BH2.tex
+++ b/BH-penrose/BH2.tex
@@ -53,14 +53,18 @@ bookmarksopenlevel=10
 %\pdfbookmark[1]{Introduction}{Introduction}
 \usetikzlibrary{decorations.pathmorphing,decorations.pathreplacing,decorations.markings}
 
-\def\scri{\mathcal I}
+\def\scri{\mathscr I}
+\def\H{\mathscr H}
+\def\ip{i^+}
+\def\im{i^-}
+\def\iz{i^0}
 
 \begin{document}
 
 Here is a Penrose diagram (or Carter-Penrose diagram, or Conformal diagram) for empty space.
 
 \begin{center}
-\begin{tikzpicture}[scale=4]
+\begin{tikzpicture}[scale=5]
         
     % BOUNDING DIAGRAM
     \coordinate (O) at ( 0, 0); % center: origin (r,t) = (0,0)
@@ -75,11 +79,11 @@ Here is a Penrose diagram (or Carter-Penrose diagram, or Conformal diagram) for 
     \draw[dashed] (SE) -- (NE);
 
     % LABELS
-    \node[right] at (E) {$i^0$};
-    \node[above] at (NE) {$i^+$};
-    \node[below] at (SE) {$i^-$};
-    \node[above right] at (0.75,0.25) {$\scri^+$};
-    \node[below ] at (0.75,-0.3) {$\scri^-$};
+    \node[above right] at (E) {\small $\iz$};
+    \node[above] at (NE) {\small $\ip$};
+    \node[below] at (SE) {\small $\im$};
+    \node[above right] at (0.75,0.25) {\small $\scri^+$};
+    \node[below ] at (0.75,-0.3) {\small $\scri^-$};
 
 \end{tikzpicture}
 \end{center}
@@ -110,7 +114,7 @@ square anymore because I wanted more room for the extra labels and things. So it
 tall for convenience. That's why $i^0$ seems like it's in the wrong place.
 
 \begin{center}
-\begin{tikzpicture}[scale=4]
+\begin{tikzpicture}[scale=5]
         
     % BOUNDING DIAGRAM
     \coordinate (O) at ( 0, 0); % center: origin (r,t) = (0,0)
@@ -128,13 +132,13 @@ tall for convenience. That's why $i^0$ seems like it's in the wrong place.
 	\draw[thick] (SM) -- (O);
     % LABELS
     	
-	    \node[right] at (E) {$i^0$};
-    \node[above right] at (NE) {$i^+$};
-    \node[below] at (S) {$i^-$};
-    \node[rotate=90] at (-.06,0) {\small{$r=0$}};
-    \node[above right] at (1,.5) {$\scri^+$};
-    \node[below right] at (.8,-.15) {$\scri^-$};
-    \node[above, rotate=45] at (0.4,.4) {\small ${\mathcal H}^+$};
+    \node[above right] at (E) {\small $\iz$};
+    \node[above] at (NE) {\small $\ip$};
+    \node[below] at (SE) {\small $\im$};
+    \node[rotate=90] at (-.06,0) {\small$r=0$};
+    \node[above right] at (1,.5) {\small$\scri^+$};
+    \node[below right] at (.8,-.15) {\small$\scri^-$};
+    \node[above, rotate=45] at (0.4,.4) {\small ${\H}^+$};
 
     % Coordinates
     \node[below, rotate=45] at (0.3,0.3) {\small $u = \infty$};
