--- a/BH-penrose/hawking.tex
+++ b/BH-penrose/hawking.tex
@@ -53,7 +53,7 @@ bookmarksopenlevel=10
 %\pdfbookmark[1]{Introduction}{Introduction}
 \usetikzlibrary{decorations.pathmorphing,decorations.pathreplacing,decorations.markings}
 
-\def\scri{\mathcal I}
+\def\scri{\mathscr I}
 
 \begin{document}
 
