--- a/BH-penrose/BH2.tex
+++ b/BH-penrose/BH2.tex
@@ -92,7 +92,7 @@ What this picture does is collapse all of space into the $x$-axis and time into 
 The idea is then that you can summarize all of the possible causal relationships in
 all of infinite space and all of time in one small finite picture. Objects moving at the speed
 of light then move along lines that have a slope of exactly 45 degrees
-($\pi/4$). These are also called ``null'' rays or trajectories in the literature.
+($\pi/4$). These are also called ``null'' rays or geodesics (e.g. shortest paths through spacetime).
 
 For convenience we stretched the diagram in the $x$ direction a bit so we have a bit more room for labels
 and such. 
@@ -105,8 +105,8 @@ Here are what the labels mean:
 \item $i^-$ is where time is at $-$ infinity.
 \item $i^0$ is $+$ infinity for space, , also called ``spacelike'' infinity. The zero here is because
 time is zero on this line?
-\item $\scri^+$ is the boundary of the universe in the future at plus infinity.
-\item $\scri^-$ is the boundary of the universe in the past at minus infinity.
+\item $\scri^+$ is ``future null infinity''. That is, it's where null rays go to in the future.
+\item $\scri^-$ is ``past null infinity''. This is where null rays come from in the past.
 \end{itemize}
 
 Now here is a more complicated diagram of a star collapsing to become a black hole. This diagram is not
