--- a/1105.1980/Helfer3.tex
+++ b/1105.1980/Helfer3.tex
@@ -109,7 +109,7 @@ I reexamine some elements of the theory of black holes, pointing out where the u
 
 \newpage
 
-\section{Introduction}
+\section*{Introduction}
 
 The current basis for the theoretical investigation of black holes largely grew out of the tremendously productive period 1963--1974, sometimes called the Golden Age of Black-Hole Theory, during which key concepts and results were obtained; from these, an extraordinarily rich and exciting
 field has developed.
@@ -140,7 +140,7 @@ The remainder of this section is devoted to a brief discussion of the problem of
 
 The conventions used here are those of \citet{Penrose:1986ca}; the metric has signature $+{}-{}-{}-$.  In some places, factors of $c$, $G$, $\hbar$ are omitted.
 
-\subsection{Teleology and Terminology}
+\subsection*{Teleology and Terminology}
 
 
 Different workers mean different things by ``black hole.''  Astrophysicists generally have in mind very compact objects which would explain certain phenomena; they are often not directly concerned with whether an event horizon in a strict sense exists, although this question is increasingly coming into the astrophysical literature (usually as the question of whether an object ``has a surface'').  At the other end of the spectrum, for mathematical relativists, the existence of the event horizon is central.  It will be clearest to begin by attempting to formalize the concept:
