--- a/gibbons-1975/gibbons-main.tex
+++ b/gibbons-1975/gibbons-main.tex
@@ -215,8 +215,8 @@ relations. This gives field commutation/anticommutation relations which are inde
 of the choice of normal modes--provided they are properly normalized with the
 natural sesquilinear form available:
 \begin{align}
-\frac{1}{2i} \int (\bar\phi\grad_\mu\phi - \phi\grad_\mu\phi) d\,\Sigma^\mu \quad & \text{for spin 0}\\
-\int \bar\psi\GG^\mu\psi d\,\Sigma^\mu \quad & \text{for spin \small$\half$}
+\frac{1}{2i} \int (\bar\phi\grad_\mu\phi - \phi\grad_\mu\phi) \,d\mskip 2mu\Sigma^\mu \quad & \text{for spin 0}\\
+\int \bar\psi\GG^\mu\psi \,d\mskip 2mu\Sigma^\mu \quad & \text{for spin \small$\half$}
 \end{align}
 What is {\it not} independent of the choice is the vacuum state. Any transformation
 of the normal modes (Bogoliubov transformation) which mixes up particle and
